[gd_scene load_steps=35 format=2]

[ext_resource path="res://sprites/GameObjects/Universal/spr_gobj_shutter_door.png" type="Texture" id=1]
[ext_resource path="res://scripts/entity/Game_objects/Obj_Shutter_Door.gd" type="Script" id=2]
[ext_resource path="res://sound_assests/objects/snd_shutter_door_move.wav" type="AudioStream" id=3]
[ext_resource path="res://sound_assests/objects/snd_shutter_door_lock.wav" type="AudioStream" id=4]
[ext_resource path="res://sound_assests/objects/snd_shutter_door_boss_lock.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 150, 64, 30, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 120, 64, 30, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 90, 64, 30, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 60, 64, 30, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 30, 64, 30, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 30, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 30, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 30, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 30, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 30, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 30, 64, 30, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 60, 64, 30, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 90, 64, 30, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 120, 64, 30, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 150, 64, 30, 64 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 20 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 28 ), SubResource( 27 ), SubResource( 26 ), SubResource( 20 ) ],
"loop": false,
"name": "close",
"speed": 16.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 2 ), SubResource( 2 ), SubResource( 1 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 1 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 14.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 15, 5 )

[node name="Obj_Shutter_Door" type="StaticBody2D"]
pause_mode = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="Door_Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 15 )

[node name="Detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
position = Vector2( 0, 27 )
shape = SubResource( 16 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="lock_snd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="boss_door_snd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="move_snd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[connection signal="frame_changed" from="Door_Sprite" to="." method="_on_Door_Sprite_frame_changed"]
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
